--- a/vuwproject.sty
+++ b/vuwproject.sty
@@ -199,6 +199,10 @@ Internet: \Ecs@fromnetaddr}
 
 \def\endabstract{\egroup}
 
+\usepackage[compact]{titlesec}
+\setlength{\parskip}{0em}
+\setlength{\parindent}{1em}
+
 %\makeatletter
 %\g@addto@macro \normalsize {%
 % \setlength\abovedisplayskip{5pt plus 2pt minus 2pt}%
